--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 
 {
   "name": "wp-debug-media",
-  "version": "0.0.0",
+  "version": "0.3.0",
   "main": "Gruntfile.js",
-  "author": "YOUR NAME HERE",
+  "author": "Joe McGill",
   "devDependencies": {
     "grunt": "^0.4.5",
     "grunt-wp-i18n": "^0.5.0",
